# SimplicityDoneRight

./: .gitmodules  README.md  prepare.bash
ConditionalSampling/: README.md  buildCondSample.py  evalCondSample.py
ConditionalSampling/buildCondSample/: buildCondSample.py
FocusedSampling/: CMakeLists.txt  RelationCol.cc  RelationCol.hh  main.cc  relspec.cc  relspec.hh
FocusedSampling/data/query/: formatQuery.py  formatQueryEnum9.py  query_frt_qu3.txt  query_frt_qu3_enum.txt  query_frt_qu5.txt  query_frt_qu5_enum.txt  query_frt_qu7.txt  query_frt_qu7_enum.txt  query_frt_qu9_format.txt
FocusedSampling/data/table/: README.md
FocusedSampling/infra/: GenRandIntVec.cc  GenRandIntVec.hh  cmeasure.c  cmeasure.h  glob_infra_standard_includes.hh  vector_ops.hh
FocusedSampling/result/pre_evaluated/: FocSample_qu3_enum.txt  FocSample_qu3_no_enum.txt  FocSample_qu5_enum.txt  FocSample_qu5_no_enum.txt  FocSample_qu7_enum.txt  FocSample_qu7_no_enum.txt  TradSample_qu3.txt  TradSample_qu3_reuse_TIDs.txt  TradSample_qu5.txt  TradSample_qu5_reuse_TIDs.txt  TradSample_qu7.txt  TradSample_qu7_reuse_TIDs.txt  plotResults.py
JOB-Queries/: README.md  transform.py
JOB-Queries/explicit/: 10c.sql  11a.sql  11b.sql  11c.sql  11d.sql  12a.sql  12c.sql  13a.sql  13b.sql  13c.sql  13d.sql  14b.sql  14c.sql  16a.sql  16b.sql  16c.sql  16d.sql  17a.sql  17b.sql  17d.sql  17e.sql  17f.sql  18a.sql  18c.sql  19a.sql  19b.sql  19c.sql  19d.sql  1a.sql  1b.sql  1c.sql  20a.sql  20b.sql  20c.sql  21a.sql  21b.sql  21c.sql  22a.sql  22b.sql  22c.sql  (+54 more)
JOB-Queries/explict/: 10a.sql  10b.sql  (+111 more)
(+113 files in other folders)
